# ironfish

./: .gitattributes  Makefile
.github/workflows/: deploy-npm-ironfish-rust-nodejs.yml
chaos/: chaos.js
ironfish-rust/: Cargo.toml
ironfish-rust-nodejs/: index.d.ts  index.js
ironfish-rust-nodejs/src/structs/: note.rs  transaction.rs
ironfish-rust-wasm/src/wasm_structs/: note.rs  note_encrypted.rs
ironfish-rust/src/: lib.rs  merkle_note.rs  note.rs  receiving.rs  spending.rs
ironfish-rust/src/keys/: mod.rs  public_address.rs
ironfish-rust/src/masp_primitives/: asset_type.rs  constants.rs  keys.rs  mod.rs  pedersen_hash.rs  primitives.rs  zip32.rs
ironfish-rust/src/masp_primitives/test_vectors/: pedersen_hash_vectors.rs
ironfish-rust/src/masp_proofs/: constants.rs  mod.rs
ironfish-rust/src/masp_proofs/circuit/: sapling.rs
ironfish-rust/src/primitives/: asset_type.rs  sapling.rs
ironfish-rust/src/proofs/circuit/: sapling.rs
ironfish-rust/src/transaction/: mod.rs  tests.rs
ironfish/src/network/peers/: peerManager.ts
ironfish/src/primitives/: note.ts  noteEncrypted.ts  transaction.ts
